vlib/v/checker/tests/unknown_method_suggest_name.out
vlib/v/checker/tests/unknown_method_suggest_name.vv:13:6: error: unknown type `hash.crc32.Crc33`.
Did you mean `crc32.Crc32`?
   11 |     y   int
   12 |     z   int
   13 |     ccc crc32.Crc33
      |         ~~~~~~~~~~~
   14 | }
   15 |
vlib/v/checker/tests/unknown_method_suggest_name.vv:31:9: error: unknown method or field: `Point.tranzlate`.
Did you mean `translate`?
   29 |         z: 10
   30 |     }
   31 |     z := p.tranzlate(v)
      |            ~~~~~~~~~~~~
   32 |     println('p: ${p}')
   33 |     println('v: ${v}')
vlib/v/checker/tests/unknown_method_suggest_name.vv:31:4: error: assignment mismatch: 1 variable but `tranzlate()` returns 0 values
   29 |         z: 10
   30 |     }
   31 |     z := p.tranzlate(v)
      |       ~~
   32 |     println('p: ${p}')
   33 |     println('v: ${v}')
vlib/v/checker/tests/unknown_method_suggest_name.vv:34:16: error: expression does not return a value
   32 |     println('p: ${p}')
   33 |     println('v: ${v}')
   34 |     println('z: ${z}')
      |                   ^
   35 | }
